# JavArk

./: CMakeLists.txt  README.md
include/: mainwindow.h  videoitem.h  videolibrary.h  videowidget.h
resources/: app_icon.aps  app_icon.rc  resources.qrc
src/: main.cpp  mainwindow.cpp  videoitem.cpp  videolibrary.cpp
